Tests/Error/InHandler/ThrowOriginal.goal
ThrowOriginal
- throw error "original error"
